--- a/index.html
+++ b/index.html
@@ -237,40 +237,75 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
 		Four primary factors contribute to this problem:
 		<br>
 		
-	<div style="margin-bottom: 25px;">
+	
 	    <b>1) Limited capability per gateway:</b>
 	    A single gateway monitors multiple channels but can only receive a small portion of packets limited by decoder resources (e.g., 16 decoders per gateway).
 	    As incoming packets are processed in a First-Come-First-Served (FCFS) way, later-arriving packets are discarded when decoders are fully occupied.
 	    <br><br>
-	    <img src="./resources/Sec3_COTS_mechanism_gw.png" style="width:60%; display:block; margin:auto;">
-	</div>
+		<div class="row no-gutters text-center align-items-center">
+		    <div class="col">
+		        <div style="display: flex; flex-direction: column; align-items: center;">
+		            <b>The radio architecture and workflow of COTS gateway</b>
+		            <img src="./resources/Sec3_COTS_mechanism_gw.png" style="width: 60%; display:block; margin:auto;">
+		        </div>
+		    </div>
+		</div>
+
 		
-	<div style="margin-bottom: 25px;">
+	    <!--img src="./resources/Sec3_COTS_mechanism_gw.png" style="width:60%; max-height: 450px; min-height: 150px; object-fit: contain; margin-top: 10px;-->
+	
+		
+	
 	    <b>2) Inefficiency with homogeneous reception:</b>
 	    Operators typically configure their gateways with standard LoRaWAN channels.
 	    As a result, these gateways operating within the same spectrum observe identical packets in the same order, leading all gateways to receive the early packets while none captures the later ones.
 	    <br><br>
-	    <img src="./resources/Channel_plan.png" style="width:60%; display:block; margin:auto;">
-	</div>
+		<div class="row no-gutters text-center align-items-center">
+		    <div class="col">
+		        <div style="display: flex; flex-direction: column; align-items: center;">
+		            <b>The radio architecture and workflow of COTS gateway</b>
+		            <img src="./resources/Channel_plan.png" style="width: 60%; display:block; margin:auto;">
+		        </div>
+		    </div>
+		</div>
 		
-	<div style="margin-bottom: 25px;">
+
+	
+		
+	
 	    <b>3) Non-optimal operational strategy:</b>
 	    LoRaWAN does not associate users with dedicated gateways.
 	    Instead, all gateways within range receive and forward a user's packets.
 	    While this strategy enhances coverage and redundancy, it can also introduce inefficiencies — some users may unnecessarily occupy decoder resources across multiple gateways, while others may be left without any decoders.
 	    <br><br>
-	    <img src="./resources/LoRaWAN_architecture2.png" style="width:60%; display:block; margin:auto;">
-	</div>
+		<div class="row no-gutters text-center align-items-center">
+		    <div class="col">
+		        <div style="display: flex; flex-direction: column; align-items: center;">
+		            <b>The radio architecture and workflow of COTS gateway</b>
+		            <img src="./resources/LoRaWAN_architecture2.png" style="width: 60%; display:block; margin:auto;">
+		        </div>
+		    </div>
+		</div>
+	    
+	
 
-	<div style="margin-bottom: 25px;">
+	
     	<b>4) Inefficient spectrum sharing:</b>
 		Current LoRaWANs lack mechanisms for spectrum sharing among network operators. 
 		In multi-network coexistence scenarios, a gateway operating in the shared spectrum detects packets not only from its own network but also from other coexisting networks.
 		Although LoRaWAN packets include network identifiers, these identifiers cannot be accessed until the packets are successfully decoded. 
 		As a result, packets from all coexisting networks compete for and consume decoder resources at each gateway prior to packet reception or rejection decisions.
 		<br><br>
-    	<img src="./resources/Sec3_COTS_mechanism_pipeline.png" style="width:60%; display:block; margin:auto;">
-	</div>
+		<div class="row no-gutters text-center align-items-center">
+		    <div class="col">
+		        <div style="display: flex; flex-direction: column; align-items: center;">
+		            <b>The radio architecture and workflow of COTS gateway</b>
+		            <img src="./resources/Sec3_COTS_mechanism_pipeline.png" style="width: 60%; display:block; margin:auto;">
+		        </div>
+		    </div>
+		</div>
+		
+
 
 		<!--Based on these new findings, this paper reveals that the practical capacity gaps observed in operational LoRaWANs are fundamentally caused by the contention for gateway decoder resources among both intra- and inter-network users, rather than by conventional issues such as network interference, packet collision, or spectrum access contention. -->
 	</center>
@@ -481,6 +516,7 @@ We select four strategies for implementation in our \projectname system based on
 
 
 </body></html>
+
 
 
 
