--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
 		<div class="row no-gutters text-center align-items-center">
 		    <div class="col">
 		        <div style="display: flex; flex-direction: column; align-items: center;">
-		            <b>The radio architecture and workflow of COTS gateway</b>
+		            <b>Channel Plans of Standard LoRaWAN</b>
 		            <img src="./resources/Channel_plan.png" style="width: 60%; display:block; margin:auto;">
 		        </div>
 		    </div>
@@ -281,7 +281,7 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
 		<div class="row no-gutters text-center align-items-center">
 		    <div class="col">
 		        <div style="display: flex; flex-direction: column; align-items: center;">
-		            <b>The radio architecture and workflow of COTS gateway</b>
+		            <b>LoRaWAN architecture</b>
 		            <img src="./resources/LoRaWAN_architecture2.png" style="width: 60%; display:block; margin:auto;">
 		        </div>
 		    </div>
@@ -299,7 +299,7 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
 		<div class="row no-gutters text-center align-items-center">
 		    <div class="col">
 		        <div style="display: flex; flex-direction: column; align-items: center;">
-		            <b>The radio architecture and workflow of COTS gateway</b>
+		            <b>Packet reception pipeline</b>
 		            <img src="./resources/Sec3_COTS_mechanism_pipeline.png" style="width: 60%; display:block; margin:auto;">
 		        </div>
 		    </div>
@@ -516,6 +516,7 @@ We select four strategies for implementation in our \projectname system based on
 
 
 </body></html>
+
 
 
 
