--- a/index.html
+++ b/index.html
@@ -245,8 +245,9 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
 		<div class="row no-gutters text-center align-items-center">
 		    <div class="col">
 		        <div style="display: flex; flex-direction: column; align-items: center;">
-		            <b>The radio architecture and workflow of COTS gateway</b>
+		            <b>The radio architecture and workflow of COTS gateway</b><br>
 		            <img src="./resources/Sec3_COTS_mechanism_gw.png" style="width: 60%; display:block; margin:auto;">
+					<br><br>
 		        </div>
 		    </div>
 		</div>
@@ -263,8 +264,9 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
 		<div class="row no-gutters text-center align-items-center">
 		    <div class="col">
 		        <div style="display: flex; flex-direction: column; align-items: center;">
-		            <b>Channel Plans of Standard LoRaWAN</b>
+		            <b>Channel Plans of Standard LoRaWAN</b><br>
 		            <img src="./resources/Channel_plan.png" style="width: 60%; display:block; margin:auto;">
+					<br><br>
 		        </div>
 		    </div>
 		</div>
@@ -281,8 +283,9 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
 		<div class="row no-gutters text-center align-items-center">
 		    <div class="col">
 		        <div style="display: flex; flex-direction: column; align-items: center;">
-		            <b>LoRaWAN architecture</b>
+		            <b>LoRaWAN architecture</b><br>
 		            <img src="./resources/LoRaWAN_architecture2.png" style="width: 60%; display:block; margin:auto;">
+					<br><br>
 		        </div>
 		    </div>
 		</div>
@@ -299,8 +302,9 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
 		<div class="row no-gutters text-center align-items-center">
 		    <div class="col">
 		        <div style="display: flex; flex-direction: column; align-items: center;">
-		            <b>Packet reception pipeline</b>
+		            <b>Packet reception pipeline</b><br>
 		            <img src="./resources/Sec3_COTS_mechanism_pipeline.png" style="width: 60%; display:block; margin:auto;">
+					<br>
 		        </div>
 		    </div>
 		</div>
@@ -309,12 +313,12 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
 
 		<!--Based on these new findings, this paper reveals that the practical capacity gaps observed in operational LoRaWANs are fundamentally caused by the contention for gateway decoder resources among both intra- and inter-network users, rather than by conventional issues such as network interference, packet collision, or spectrum access contention. -->
 	</center>
-
+<!--
     <center>
       <center><b>Content to be determined</b></center>
         <img style="width: 100%;" src="./resources/Problem_formulation.pdf.png">
     </center>
-
+-->
 
 <!-- second section -->
     <hr> 
@@ -516,6 +520,7 @@ We select four strategies for implementation in our \projectname system based on
 
 
 </body></html>
+
 
 
 
