--- a/index.html
+++ b/index.html
@@ -433,14 +433,14 @@ We select four strategies for implementation in our \projectname system based on
 
     <center>
       <center><b>  </b></center>   <!-- title of strategy 2 -->
-        <img style="width: 100%;" src="./resources/Problem_formulation.pdf.png">
+        <img style="width: 60%;" src="./resources/Problem_formulation.pdf.png">
     </center>
 
 <!--third section -->
    <hr> 
 
     <div class="gap-10"></div>
-    <h2 style="text-align: center"> Strategy ⑧: Spectrum sharing with misaligned channel plans </h2>
+    <h2 style="text-align: center"> Strategy: Spectrum sharing with misaligned channel plans </h2>
     <div class="gap-10"></div>
 
     <center><p style="width:90%; text-align: justify; white-space: normal;">
@@ -541,6 +541,7 @@ Operators use the allocated channels to configure gateways and end nodes (\eg, t
 
 
 </body></html>
+
 
 
 
