--- a/index.html
+++ b/index.html
@@ -212,13 +212,13 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
 <div class="row no-gutters text-center align-items-center">
     <div class="col">
         <div style="display: flex; flex-direction: column; align-items: center;">
-            <b>Capacity gaps of a single LoRaWAN</b>
+            <b>Figure: Capacity gaps of a single LoRaWAN</b>
             <img src="./resources/1.png" style="width: 60%; max-height: 450px; min-height: 150px; object-fit: contain; margin-top: 10px;">
         </div>
     </div>
     <div class="col">
         <div style="display: flex; flex-direction: column; align-items: center;">
-            <b>Capacity when two LoRaWANs coexist</b>
+            <b>Figure: Capacity when two LoRaWANs coexist</b>
             <img src="./resources/2.png" style="width: 60%; max-height: 450px; min-height: 150px; object-fit: contain; margin-top: 10px;">
         </div>
     </div>
@@ -245,7 +245,7 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
 		<div class="row no-gutters text-center align-items-center">
 		    <div class="col">
 		        <div style="display: flex; flex-direction: column; align-items: center;">
-		            <b>The radio architecture and workflow of COTS gateway</b><br>
+		            <b>Figure: The radio architecture and workflow of COTS gateway</b><br>
 		            <img src="./resources/Sec3_COTS_mechanism_gw.png" style="width: 60%; display:block; margin:auto;">
 					<br><br>
 		        </div>
@@ -264,7 +264,7 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
 		<div class="row no-gutters text-center align-items-center">
 		    <div class="col">
 		        <div style="display: flex; flex-direction: column; align-items: center;">
-		            <b>Channel Plans of Standard LoRaWAN</b><br>
+		            <b>Figure: Channel Plans of Standard LoRaWAN</b><br>
 		            <img src="./resources/Channel_plan.png" style="width: 60%; display:block; margin:auto;">
 					<br><br>
 		        </div>
@@ -283,7 +283,7 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
 		<div class="row no-gutters text-center align-items-center">
 		    <div class="col">
 		        <div style="display: flex; flex-direction: column; align-items: center;">
-		            <b>LoRaWAN architecture</b><br>
+		            <b>Figure: LoRaWAN architecture</b><br>
 		            <img src="./resources/LoRaWAN_architecture2.png" style="width: 35%; display:block; margin:auto;">
 					<br><br>
 		        </div>
@@ -302,7 +302,7 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
 		<div class="row no-gutters text-center align-items-center">
 		    <div class="col">
 		        <div style="display: flex; flex-direction: column; align-items: center;">
-		            <b>Packet reception pipeline</b><br>
+		            <b>Figure: Packet reception pipeline</b><br>
 		            <img src="./resources/Sec3_COTS_mechanism_pipeline.png" style="width: 60%; display:block; margin:auto;">
 					<br>
 		        </div>
@@ -465,13 +465,13 @@ Operators use the allocated channels to configure gateways and end nodes (\eg, t
     <div class="row no-gutters">
         <div class="col">
 			<div style="display: flex; flex-direction: column; align-items: center;">
-            	<b>Frequency misalignment</b>
+            	<b>Figure: Frequency misalignment</b>
             	<img src="./resources/Sec4_4_overlap_channel_plan.png" style="width: 30%; max-height: 450px; min-height: 150px; object-fit: contain; margin-top: 10px;">
         	</div>
 		</div>
         <div class="col">
 			<div style="display: flex; flex-direction: column; align-items: center;">
-            	<b>Spectrum sharing in AlphaWAN</b>
+            	<b>Figure: Spectrum sharing in AlphaWAN</b>
             	<img src="./resources/Sec5_3_spectrum_sharing.pdf.png" style="width: 60%; max-height: 450px; min-height: 150px; object-fit: contain;  margin-top: 10px;">
         	</div>
 		</div>
@@ -490,7 +490,7 @@ Operators use the allocated channels to configure gateways and end nodes (\eg, t
     </p></center>
 
         <center>
-      <center><b>System architecture of AlphaWAN</b></center>
+      <center><b>Figure: System architecture of AlphaWAN </b></center>   <!--System architecture of AlphaWAN-->
         <img style="width: 60%;" src="./resources/System_architecture.pdf.png">
     </center>
 
@@ -509,13 +509,13 @@ Operators use the allocated channels to configure gateways and end nodes (\eg, t
     <div class="row no-gutters text-center align-items-center">
         <div class="col">
 			<div style="display: flex; flex-direction: column; align-items: center;">
-            	<b>Capacity gain (single network)</b>
+            	<b>Figure: Capacity gain (single network)</b>
             	<img src="./resources/capacity_gain.jpg" style="width: 60%; max-height: 450px; min-height: 150px; object-fit: contain; margin-top: 10px;">
 			</div>
         </div>
         <div class="col">
 			<div style="display: flex; flex-direction: column; align-items: center;">
-            	<b>Spectrum gain (Multi-network coexistence)</b>
+            	<b>Figure: Spectrum gain (Multi-network coexistence)</b>
             	<img src="./resources/Spectrum_gain.jpg" style="width: 60%; max-height: 450px; min-height: 150px; object-fit: contain; margin-top: 10px;">
         	</div>
 		</div>
@@ -541,6 +541,7 @@ Operators use the allocated channels to configure gateways and end nodes (\eg, t
 
 
 </body></html>
+
 
 
 
