--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
         <!-- Existing studies primarily attribute such capacity limitations to packet collisions and interference in the shared wireless medium. -->
 		Our study indicates that even in the absence of packet collisions, LoRaWANs still experience significant capacity gaps due to a newly identified issue termed <i>decoder contention problem</i>. 
 		Four primary factors contribute to this problem:
-		<br>
+		<br><br>
 		
 	
 	    <b>1) Limited capability per gateway:</b>
@@ -256,7 +256,7 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
 	    <!--img src="./resources/Sec3_COTS_mechanism_gw.png" style="width:60%; max-height: 450px; min-height: 150px; object-fit: contain; margin-top: 10px;-->
 	
 		
-	
+		<p style="width:90%; text-align: justify; white-space: normal;">
 	    <b>2) Inefficiency with homogeneous reception:</b>
 	    Operators typically configure their gateways with standard LoRaWAN channels.
 	    As a result, these gateways operating within the same spectrum observe identical packets in the same order, leading all gateways to receive the early packets while none captures the later ones.
@@ -274,7 +274,7 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
 
 	
 		
-	
+		<p style="width:90%; text-align: justify; white-space: normal;">
 	    <b>3) Non-optimal operational strategy:</b>
 	    LoRaWAN does not associate users with dedicated gateways.
 	    Instead, all gateways within range receive and forward a user's packets.
@@ -292,7 +292,7 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
 	    
 	
 
-	
+		<p style="width:90%; text-align: justify; white-space: normal;">
     	<b>4) Inefficient spectrum sharing:</b>
 		Current LoRaWANs lack mechanisms for spectrum sharing among network operators. 
 		In multi-network coexistence scenarios, a gateway operating in the shared spectrum detects packets not only from its own network but also from other coexisting networks.
@@ -541,6 +541,7 @@ Operators use the allocated channels to configure gateways and end nodes (\eg, t
 
 
 </body></html>
+
 
 
 
