--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ We select four strategies for implementation in our \projectname system based on
     </p></center>
 
     <center>
-      <center><b>  </b></center>   <!-- title of strategy 2 -->
+      <center><b> Figure: Heterogeneous channel adoption </b></center>   <!-- title of strategy 2 -->
         <img style="width: 60%;" src="./resources/Problem_formulation.pdf.png">
     </center>
 
@@ -490,7 +490,7 @@ Operators use the allocated channels to configure gateways and end nodes (\eg, t
     </p></center>
 
         <center>
-      <center><b>Figure: System architecture of AlphaWAN </b></center>   <!--System architecture of AlphaWAN-->
+      <center><b>Figure: System architecture of AlphaWAN </b></center><br>   <!--System architecture of AlphaWAN-->
         <img style="width: 60%;" src="./resources/System_architecture.pdf.png">
     </center>
 
@@ -541,6 +541,7 @@ Operators use the allocated channels to configure gateways and end nodes (\eg, t
 
 
 </body></html>
+
 
 
 
