--- a/index.html
+++ b/index.html
@@ -330,8 +330,9 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
     <div class="gap-10"></div>
     <h2 style="text-align: center"> Decoder Contention Problem </h2>
     <div class="gap-10"></div>
-
-	<center><p style="width:90%; text-align: justify; white-space: normal;">
+	<!--<pre style="background-color: #f4f4f4; width: 90%; text-align: left; white-space: pre-wrap;">-->
+	<!--<center><p style="width:90%; text-align: justify; white-space: normal;">-->
+	<center><p style="background-color: #f4f4f4; width:90%; text-align: justify; white-space: normal;">
 		In summary, the capacity gaps observed in operational LoRaWANs are fundamentally caused by the <i>Decoder Contention Problem</i> as follows:<br>
 		The practical capacity of a LoRaWAN is limited by the decoder resources of gateways. Suboptimal LoRaWAN operating strategies, such as homogeneous channel configurations across gateways and coexisting networks, lead to intensive contentions for gateway decoder resources among both intra- and inter-network users.
 		These contentions are further intensified by LoRaWAN's unique characteristics, including operation in unlicensed ISM bands, long communication range, and the absence of user-gateway association. 
@@ -575,6 +576,7 @@ Operators use the allocated channels to configure gateways and end nodes (\eg, t
 
 
 </body></html>
+
 
 
 
