--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
     <hr> 
 
     <div class="gap-10"></div>
-    <h2 style="text-align: center"> <i>Decoder Contention Problem</i> </h2>
+    <h2 style="background-color: #f4f4f4; text-align: center"> <b><i>Decoder Contention Problem</i></b> </h2>
     <div class="gap-10"></div>
 	<!--<pre style="background-color: #f4f4f4; width: 90%; text-align: left; white-space: pre-wrap;">-->
 	<!--<center><p style="width:90%; text-align: justify; white-space: normal;">-->
@@ -338,7 +338,6 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
 		These contentions are further intensified by LoRaWAN's unique characteristics, including operation in unlicensed ISM bands, long communication range, and the absence of user-gateway association. 
 		Specifically, because LoRaWAN allows any gateway within range to receive and forward packets from any user, some users unnecessarily consume decoder resources at multiple gateways, while others fail to access any available decoders. 
 		These factors collectively contribute to the practical capacity gaps of LoRaWANs.	
-		<br><br>
 
 		<!--
 		To investigate the practical implications of the decoder contention problem, we record and analyze packet loss in real-world LoRaWAN deployments, classifying the causes into three categories: decoder contention, channel contention (\ie, multiple nodes using identical transmission settings), and other factors (interference, poor SNRs, \etc). 
@@ -576,6 +575,7 @@ Operators use the allocated channels to configure gateways and end nodes (\eg, t
 
 
 </body></html>
+
 
 
 
