--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ Consequently, each network acquires only a fraction of the limited capacity, whi
     <hr> 
 
     <div class="gap-10"></div>
-    <h2 style="background-color: #f4f4f4; text-align: center"> <b><i>Decoder Contention Problem</i></b> </h2>
+    <h2 style="background-color: #f4f4f4; text-align: center"> <b>Decoder Contention Problem</b> </h2>
     <div class="gap-10"></div>
 	<!--<pre style="background-color: #f4f4f4; width: 90%; text-align: left; white-space: pre-wrap;">-->
 	<!--<center><p style="width:90%; text-align: justify; white-space: normal;">-->
@@ -575,6 +575,7 @@ Operators use the allocated channels to configure gateways and end nodes (\eg, t
 
 
 </body></html>
+
 
 
 
